2007-01-04  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Jeff Garzik <jeff at garzik org>

	* src/conn.c:
	(gnet_conn_unref):
	* src/inetaddr.c:
	(gnet_inetaddr_unref):
	(gnet_inetaddr_get_name_async_cb):
	* src/md5.c:
	(gnet_md5_delete):
	* src/sha.c:
	(gnet_sha_delete):
	* src/tcp.c:
	(gnet_tcp_socket_connect_async_cancel):
	* src/uri.c:
	(gnet_uri_set_scheme):
	(gnet_uri_set_userinfo):
	(gnet_uri_set_hostname):
	(gnet_uri_set_path):
	(gnet_uri_set_query):
	(gnet_uri_set_fragment):
	  Eliminate unnecessary non-NULL checks in front of g_free().
	  g_free() handles NULL just fine and will do nothing in that case.

	* tests/conn_http_test.c:
	(test_simple_get):
	  Fix typo.

2006-12-10  Tim-Philipp Müller  <tim at centricular dot net>

	* examples/xmlrpc/xmlrpc-client.c: (gnet_xmlrpc_client_call),
	(build_xmlrpc_message):
	  Use gsize where appropriate; add cast from gsize to correct printf
	  format. Patch by Jeff Garzik <jeff at garzik org>.

2006-10-30  Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn-http.c: (gnet_conn_http_conn_connected),
	(gnet_conn_http_conn_recv_response),
	(gnet_conn_http_conn_recv_headers),
	(gnet_conn_http_conn_recv_chunk_body),
	(gnet_conn_http_conn_recv_nonchunked_data),
	(gnet_conn_http_conn_cb):
	  Fix behaviour when the server closes the connection (this is not
	  automatically an error). Fix retrieval of non-text data in
	  non-chunked mode (we would use _readline() for non-chunked mode,
	  but this might cause data at the end of the file to be lost if
	  the file is random binary data).

2006-10-30  Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn-http.c: (gnet_conn_http_conn_recv_chunk_body),
	(gnet_conn_http_conn_recv_nonchunked_data):
	  Don't forget to set the buffer_length member in our
	  GConnHttpEventData structure when emitting a PARTIAL_DATA
	  event.

	* tests/conn_http_test.c: (http_async_callback):
	  Check that GConnHttpEventData members are set for PARTIAL_DATA
	  events.
